--- a/public/fm.html
+++ b/public/fm.html
@@ -57,10 +57,10 @@
                 id="search"
                 type="search"
                 placeholder="Search vendors, items, RFQs…"
-                class="w-full h-10 rounded-xl border border-slate-300 pl-10 pr-3 outline-none focus:ring-2 focus:ring-primary/30"
+                class="w-full h-10 rounded-xl border border-slate-300 ps-10 pe-3 outline-none focus:ring-2 focus:ring-primary/30"
               />
               <svg
-                class="absolute left-3 top-1/2 -translate-y-1/2 h-5 w-5 text-slate-400"
+                class="absolute start-3 top-1/2 -translate-y-1/2 h-5 w-5 text-slate-400"
                 viewBox="0 0 24 24"
                 fill="none"
               >
